fix spring devtools compatible issue (#6)
* fix spring devtools compatible issue

* remove scripts

* remove scripts